# bots

./: .gitignore  .gitmodules  .justfile  README.md  available.json  browser.py  cookies  cookies-full  openings.http  partial.json  pom.xml  pyproject.toml  ref.json  ref2.json  request.http  response.json  target.json  target2.json
arzdir-bot/: .gitignore  Dockerfile  main.py  notes.md  requirements.txt
arzt-direkt/: .gitignore  bot.py
arztdir-bot/: Dockerfile  arztdir.py  config.py  main.py  pyproject.toml  service.py
auto-gpt-corrector/: pom.xml
auto-lumberjack-bot/: README.md  main.py
auto-media-sorter/: pyproject.toml  sort_media.py
auto-tg-media-exporter/: auth.py  cli.py  config.py  dialogs.py  exporter.py  logger.py  media.py  media_exporter.py  pyproject.toml  state.py
bot-parent/: setup.sh
core-bots/: Dockerfile  pyproject.toml
core-bots/core_bots/: __init__.py  bot.py  cfg.py  config.py  utils.py
demotivator-bot/: Dockerfile  image_generator.py  pyproject.toml
eversports-bot/: Dockerfile  config.yaml  main.py  pyproject.toml
focus-observer-bot/: observer
forwarder-bot/: Dockerfile  main.py  pyproject.toml  requirements.txt
gimme-money-bot/: gmmb.py
homework-bot/: README.md  classes.py  config.py  data.py  homework.db  localization.py  main.py
immo-crawler/: cookies  googlepaths.py
impulse-judge-bot/: bot.py
journal-reminder-bot/: .gitignore  pom.xml
parent/: Dockerfile
rezka-syncer-bot/: dl  main.py  pyproject.toml
saved-messages-bot/: Dockerfile  cfg.py  config.ini  config.py  main.py  pyproject.toml  requirements.txt
(+74 files in other folders)
