[project]
name = "bots"
version = "0.1.0"
description = "Python automation and telegram bots"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "core-bots",
    "saved-messages-bot",
]

# tells uv: when any member depends on "core-bots",
# use the local workspace version — no -e needed
[tool.uv.sources]
core-bots = { workspace = true }
