[project]
name = "bots"
version = "0.1.0"
description = "Python automation and telegram bots"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "core-bots",
    "saved-messages-bot",
    "arztdir-bot",
    "voucher-bot",
    "volk-bot",
    "tools-bot",
    "rezka-syncer-bot",
    "forwarder-bot",
    "demotivator-bot",
    "auto-media-sorter",
    "auto-tg-media-exporter",
    "eversports-bot",
]

# tells uv: when any member depends on "core-bots",
# use the local workspace version — no -e needed
[tool.uv.sources]
core-bots = { workspace = true }

# uv init bot
# uv sync --all-packages
